Fix Sass issue where blinking Cursor still visible in IE on Select box.

--- a/sass/partials/types/_select.scss
+++ b/sass/partials/types/_select.scss
@@ -20,6 +20,11 @@
 }
 
 .select-box {
+
+	> .field-items > .field-item-input > input {
+		visibility:hidden;
+	}	
+
 	.field-item-input, input {
 		cursor: pointer;
 	}
